1. Remove JUnit 4 from the pom.xml 2. Change the name of class and test class 3. More test were written 4. The same dependencies was added some in main